# JieqiAI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
BOOK/: MAKEBOOK.CPP
DOC/: eleeye_horizon.htm  eleeye_parallel.htm  eleeye_search.htm  eleeye_struct.htm
LEAGUE/: uccileag.cpp
MAKETEST/: maketest.cpp  uccitest.cpp  unittest.cpp
MISC/EXPIPE/: Pipe.java  runjar.cpp
MISC/Echo/src/: EchoFrame.java
MISC/FEN2BMP/: FEN2BMP.C
MISC/TEST/: complex.h  fft.cpp  fft.h  fftmul.cpp  fraction.cpp  fraction.h  genprime.cpp  matrix.cpp  matrix.h  network.cpp  network2.cpp
PROTOCOL/: plugin_spec.html
TEST/: maketest.cpp  unittest.cpp
UCCI2QH/: qh2ucci.cpp  ucci2qh.cpp
XQFTOOLS/: MXQFCONV.CPP  ccm2pgn.cpp  che2pgn.cpp  chn2pgn.cpp  mxq2pgn.cpp  pgn2xqf.cpp  xqf2pgn.cpp
base/: ALPHABLT.C  BASE.BAS  base2.h
eleeye/: CMakeLists.txt  book.cpp  book.h  eleeye.cpp  evaluate.cpp  genmoves.cpp  hash.cpp  hash.h  movesort.cpp  movesort.h  position.cpp  position.h  preeval.cpp  preeval.h  pregen.cpp  pregen.h  search.cpp  search.h  ucci.cpp  ucci.h
engine/: CMakeLists.txt  base.h  book.cpp  book.h  evaluate.cpp  genmoves.cpp  hash.cpp  hash.h  jieqiai.cpp  movesort.cpp  movesort.h  parse.h  pipe.cpp  pipe.h  position.cpp  position.h  preeval.cpp  pregen.cpp  pregen.h  rc4prng.h  search.cpp  search.h  ucci.cpp  ucci.h  wsockbas.cpp
frontend/: Makefile  index.html  index.js  package-lock.json  package.json
frontend/icon/: chess.icns
frontend/src/: chess.js  index.html  index.js  renderer.js  theme.js
frontend/src/rpc/: chess_client.js
server/: CMakeLists.txt  ChessServerImpl.cpp  ChessServerImpl.h  Makefile  server.cpp  server.h
server/gen_grpc/: chess.grpc.pb.cc  chess.grpc.pb.h  chess.pb.cc  chess.pb.h
server/proto/: chess.proto
test/: unit_test.py
test/unit_tests/: 兵三进一回马8进7.test  兵五进一.out  兵五进一.test  炮二平八.out  炮二平八.test  马8进7.out  马8进7.test
